--- a/RecoveryFactorStudy.Rnw
+++ b/RecoveryFactorStudy.Rnw
@@ -130,8 +130,11 @@ SaveRData <- sprintf("%s.Rdata", thisFileName)
 
 <<DW15SR1, include=TRUE, fig.cap="Recovery temperature RTH1 as a function of $V^2/(2C_p)$ for the values as originally measured (blue line) and after shifting by 2.32 s to minimize the difference between accelerating and decelerating branches of the speed run. Data from DEEPWAVE flight 15, 3:23:00--3:28:00 UTC.">>=
 
+# pdf(file='SpeedRunDelayed.pdf')
 Data$X <- Data$TASX^2 / (2 * CP[1])
-plot (Data$X, Data$RTHR1, type='l', col='blue', xlab=expression(0.5~V^2 / C[p]), ylab='RTHR1')
+plotWAC (Data$X, Data$RTHR1, type='l', col='blue', ylim=c(-14,3),
+  xlab=expression(0.5~V^2 / C[p]), 
+  ylab=expression(paste('temperature [',degree,'C]')))
 f1 <- lm (Data$RTHR1 ~ Data$X)
 #print (sprintf (" rms for unshifted values %.3f", summary(f1)$sigma))
 ## difference in steady change expected to be tau*(dT/dt)
@@ -142,8 +145,9 @@ TTm3 <- c(rep(Data$RTHR1[1], Nshift), Data$RTHR1[1:(nrow(Data)-Nshift)])
 Data$RTHR1 <- 2*Data$RTHR1-TTm3
 f2 <- lm (Data$RTHR1 ~ Data$X)
 #print (sprintf (" rms for shifted values %.3f", summary(f2)$sigma))
-lines (Data$X, Data$RTHR1, col='red')
-legend('bottomright', legend=c('unshifted', 'advanced 2.32 s'), text.col=c('blue', 'red'))
+lines (Data$X, Data$RTHR1, col='forestgreen')
+legend('bottomright', legend=c('unshifted', 'advanced 2.32 s'), text.col=c('blue', 'forestgreen'))
+# dev.off()
 
 @
 
